Fixed color contrast issue with main

--- a/week01/styles/layout.css
+++ b/week01/styles/layout.css
@@ -30,11 +30,10 @@ nav a {
 }
 
 main {
-  background-color: cadetblue;
+  background-color: darkgray;
   padding: 10px;
   grid-column: 1/3;
   height: 20rem;
-  color: #fff;
 }
 
 aside {
